--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,7 @@
-h1 {
-  color: #27aedb;
-  text-align: center;
+@import './reset.css';
+@import './variables.scss';
+
+body {
+  background-color: $grey-100;
+  font-family: $helvetica;
 }
